# Medidor

./: CMakeLists.txt  README.md  Temperatura.c  diagram.json  wokwi.toml
